# pdfwf

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: 01_bug.yml  02_enhancement.yml  03_docs.yml
adaparse/: __init__.py  balance.py  cli.py  convert.py  parsl.py  registry.py  utils.py
adaparse/parsers/: __init__.py  adaparse.py  base.py  marker.py  nougat_.py  pymupdf.py  pypdf.py  tesseract.py
adaparse/parsers/oreo/: tensor_utils.py
examples/: convert_markdown_to_jsonl.py  convert_parquet_to_jsonl.py  strong_scaling.ipynb
examples/adafast/: adafast_config.yaml  adafast_config_prod_128.yaml  adafast_config_prod_16.yaml  adafast_config_prod_32.yaml  adafast_config_prod_64.yaml  adafast_config_prod_8.yaml
examples/adaparse/: adaparse.py  adaparse_on_adaparse_small_scale.yaml  adaparse_on_adaparse_small_scale_updated.yaml  adaparse_test.yaml
examples/adaparse/monitoring/: adaparse_on_adaparse_small_scale_updated.yaml
examples/marker/: marker_joint.yaml  marker_small_test.yaml  marker_test.yaml  marker_zip_test.yaml
examples/marker/monitoring/: marker_monitoring.yaml
examples/nougat/: additional_merged_pdfs.yaml  all_merged_pdfs.yaml  nougat_imports_zip.yaml  nougat_on_adaparse_small_scale.yaml  nougat_test.yaml  nougat_workstation.yaml  nougat_zip_test.yaml
examples/nougat/leonardo-scaling/: nougat.leonardo.nodes1.yaml  nougat.leonardo.nodes1024.yaml  nougat.leonardo.nodes1480.yaml  nougat.leonardo.nodes2.yaml  nougat.leonardo.nodes256.yaml  nougat.leonardo.nodes512.yaml  nougat.leonardo.nodes64.yaml
examples/nougat/monitoring/: nougat_monitoring.yaml
examples/nougat/polaris-scaling/: nougat.polaris.nodes1.yaml  nougat.polaris.nodes128.yaml  nougat.polaris.nodes2.yaml  nougat.polaris.nodes256.yaml  nougat.polaris.nodes32.yaml  nougat.polaris.nodes450.yaml  nougat.polaris.nodes512.yaml  nougat.polaris.nodes64.yaml  nougat.polaris.nodes8.yaml
examples/nvidia-smi-test/: logger-test.yaml  workstation_config.yaml
examples/oreo/: oreo_imports_zip.yaml  oreo_joint.yaml  oreo_lucid.yaml  oreo_test.yaml
examples/oreo/leonardo-scaling/: oreo.leonardo.nodes1024.yaml  oreo.leonardo.nodes1480.yaml  oreo.leonardo.nodes2.yaml  oreo.leonardo.nodes256.yaml  oreo.leonardo.nodes512.yaml  oreo.leonardo.nodes64.yaml
examples/oreo/polaris-scaling/: ian-imports2.oreo.yaml  oreo.polaris.nodes128.yaml  oreo.polaris.nodes2.yaml  oreo.polaris.nodes256.yaml  oreo.polaris.nodes32.yaml  oreo.polaris.nodes450.yaml  oreo.polaris.nodes64.yaml
examples/pymupdf/: pymupdf_joint.yaml  pymupdf_on_adaparse_small_scale.yaml  pymupdf_on_adaparse_small_scale_updated.yaml  pymupdf_small_test.yaml  pymupdf_test.yaml  pymupdf_zip_test.yaml
examples/pymupdf/monitoring/: pymupdf_on_adaparse_small_scale_updated.yaml  pymupdf_test.yaml
examples/pypdf/: pypdf_joint.yaml  pypdf_on_adaparse_small_scale.yaml  pypdf_test.yaml
examples/scaling/: nougat-scaling-1.yaml  nougat-scaling-16.yaml  nougat-scaling-2.yaml  nougat-scaling-32.yaml  nougat-scaling-4.yaml  nougat-scaling-64.yaml  nougat-scaling-8.yaml  nougat-scaling-96.yaml
examples/scaling-configs/adaparse/: nodes_1.yaml  nodes_128.yaml  nodes_150.yaml  nodes_16.yaml  nodes_2.yaml  nodes_32.yaml  nodes_4.yaml  nodes_64.yaml  nodes_8.yaml
examples/scaling-configs/pymupdf/: nodes_1.yaml  nodes_128.yaml  nodes_150.yaml  nodes_16.yaml  nodes_2.yaml  nodes_32.yaml  nodes_4.yaml  nodes_64.yaml  nodes_8.yaml
examples/scaling-configs/pypdf/: nodes_1.yaml  nodes_128.yaml  nodes_150.yaml  nodes_16.yaml  nodes_2.yaml  nodes_32.yaml  nodes_4.yaml  nodes_64.yaml  nodes_8.yaml
examples/scaling/pdfparsing-polaris/: nougat.polaris.nodes2.csv  nougat.polaris.nodes32.csv  nougat.polaris.nodes64.csv  nougat.polaris.nodes8.csv  oreo.polaris.nodes2.csv  oreo.polaris.nodes32.csv  oreo.polaris.nodes64.csv
examples/scaling/pdfparsing-sunspot/: nougat.sunspot.nodes1.csv  nougat.sunspot.nodes16.csv  nougat.sunspot.nodes2.csv  nougat.sunspot.nodes32.csv  nougat.sunspot.nodes4.csv  nougat.sunspot.nodes64.csv  nougat.sunspot.nodes8.csv  nougat.sunspot.nodes96.csv
examples/scaling/semantic-chunking-polaris/: nougat.sfr-mistral.polaris.nodes2.csv  nougat.sfr-mistral.polaris.nodes32.csv
examples/scaling/semantic-chunking-sunspot/: nougat.sfr-mistral.sunspot.nodes1.csv  nougat.sfr-mistral.sunspot.nodes16.csv  nougat.sfr-mistral.sunspot.nodes4.csv
examples/tesseract/: tesseract_on_adaparse_25k_pdfs.yaml  tesseract_on_adaparse_25k_pdfs_CARLO.yaml  tesseract_on_adaparse_25k_pdfs_KYLE.yaml  tesseract_on_adaparse_25k_pdfs_OZAN.yaml  tesseract_on_adaparse_small_scale.yaml  tesseract_on_adaparse_tiny_pdfs.yaml  tesseract_on_adaparse_tiny_zips.yaml  tesseract_test.yaml  tesseract_zip_test.yaml
main/: sitemap.xml
pdfwf/: __init__.py  balance.py  cli.py  config.py  convert.py  parsl.py  registry.py  timer.py  utils.py
pdfwf/parsers/: __init__.py  adafast.py  adaparse.py  base.py  marker.py  nougat_.py  pymupdf.py  pypdf.py  tesseract.py
pdfwf/parsers/oreo/: __init__.py  oreo.py  oreo_v2.py  tensor_utils.py
requirements/: adaparse_requirements.txt  nougat_requirements.txt  oreo_requirements.txt  pymupdf_requirements.txt  requirements.txt
testing/: README.md  __init__.py  data.py
tests/: README.md  __init__.py  bar_test.py  pdfwf_test.py  single_process_test.py
utils/: setup_marker_localenv.sh  test_sunspot_parsl.py
